@@ -796,6 +796,9 @@ initpycurl(void)
     insint_c(d, "FTP_SSL_CCC", CURLOPT_FTP_SSL_CCC);
     insint_c(d, "TIMEOUT_MS", CURLOPT_TIMEOUT_MS);
     insint_c(d, "CONNECTTIMEOUT_MS", CURLOPT_CONNECTTIMEOUT_MS);
+#if LIBCURL_VERSION_NUM >= MAKE_LIBCURL_VERSION(7, 24, 0)
+    insint_c(d, "ACCEPTTIMEOUT_MS", CURLOPT_ACCEPTTIMEOUT_MS);
+#endif
     insint_c(d, "HTTP_TRANSFER_DECODING", CURLOPT_HTTP_TRANSFER_DECODING);
     insint_c(d, "HTTP_CONTENT_DECODING", CURLOPT_HTTP_CONTENT_DECODING);
     insint_c(d, "NEW_FILE_PERMS", CURLOPT_NEW_FILE_PERMS);
